// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Paragraph Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <p
    className="container color-base size-md"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
  <p
    className="container color-primary size-md"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
  <p
    className="container color-muted size-md"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
  <p
    className="container color-inverted size-md"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
</div>
`;

exports[`Storyshots Atoms/Paragraph Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <p
    className="container color-base size-md"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
</div>
`;

exports[`Storyshots Atoms/Paragraph Is Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <p
    className="container color-base size-md is-inline"
  >
    it is paragraph inline
  </p>
</div>
`;

exports[`Storyshots Atoms/Paragraph Size 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <p
    className="container color-base size-xs"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
  <p
    className="container color-base size-sm"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
  <p
    className="container color-base size-md"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
  <p
    className="container color-base size-lg"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
  <p
    className="container color-base size-xl"
  >
    I can't remember anything Can't tell if this is true or dream deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now
  </p>
</div>
`;
